--- a/008-styles-classes/exercise-solutions/warmup.html
+++ b/008-styles-classes/exercise-solutions/warmup.html
@@ -4,6 +4,6 @@
     <title>Warmup Exercise</title>
   </head>
   <body>
-    <h1>Welcome to the warmup exercise!</h1>
+    <h1>Welcome tjhhjo the warmup exercise!</h1>
   </body>
 </html>
